# temperaturecontrol

./: ACSystem.cpp  ACSystem.h  ACSystemMock.h  AppExample.cpp  CMakeLists.txt  Doxyfile  IACSystem.h  ITemperatureSensor.h  README.md  TemperatureControl.cpp  TemperatureControl.h  TemperatureSensor.cpp  TemperatureSensor.h  TemperatureSensorMock.h  test_temperaturecontrol.cpp
